@@ -6,19 +6,18 @@ import java.awt.event.MouseEvent;
 import java.util.List;
 import java.util.Map;
 
-import ch.alpine.ascona.util.api.LogWeighting;
-import ch.alpine.ascona.util.api.LogWeightings;
-import ch.alpine.ascona.util.dis.ManifoldDisplay;
-import ch.alpine.ascona.util.dis.ManifoldDisplays;
-import ch.alpine.ascona.util.ref.AsconaParam;
-import ch.alpine.ascona.util.win.ControlPointsDemo;
+import ch.alpine.ascony.api.LogWeighting;
+import ch.alpine.ascony.api.LogWeightings;
+import ch.alpine.ascony.dis.ManifoldDisplay;
+import ch.alpine.ascony.dis.ManifoldDisplays;
+import ch.alpine.ascony.ref.AsconaParam;
+import ch.alpine.ascony.win.ControlPointsDemo;
 import ch.alpine.bridge.swing.SpinnerLabel;
 import ch.alpine.bridge.swing.SpinnerListener;
-import ch.alpine.sophus.dv.Biinvariant;
-import ch.alpine.sophus.dv.Biinvariants;
+import ch.alpine.sophis.dv.Biinvariant;
+import ch.alpine.sophis.dv.Biinvariants;
+import ch.alpine.sophis.dv.Sedarim;
 import ch.alpine.sophus.hs.Manifold;
-import ch.alpine.sophus.hs.Sedarim;
-import ch.alpine.sophus.math.var.VariogramFunctions;
 import ch.alpine.tensor.RationalScalar;
 import ch.alpine.tensor.RealScalar;
 import ch.alpine.tensor.Scalar;
@@ -26,6 +25,7 @@ import ch.alpine.tensor.Tensor;
 import ch.alpine.tensor.Tensors;
 import ch.alpine.tensor.api.ScalarUnaryOperator;
 import ch.alpine.tensor.api.TensorScalarFunction;
+import ch.alpine.tensor.sca.var.VariogramFunctions;
 
 public abstract class AbstractScatteredSetWeightingDemo extends ControlPointsDemo {
   protected final ScatteredSetParam scatteredSetParam;
@@ -78,22 +78,22 @@ public abstract class AbstractScatteredSetWeightingDemo extends ControlPointsDem
       if (array.contains(LogWeightings.COORDINATE))
         spinnerLogWeighting.setValue(LogWeightings.COORDINATE);
       else
-        spinnerLogWeighting.setValue(array.get(0));
+        spinnerLogWeighting.setValue(array.getFirst());
       if (1 < array.size())
         spinnerLogWeighting.addToComponent(timerFrame.jToolBar, "weights");
     }
     spinnerLogWeighting.addSpinnerListener(spinnerListener);
     spinnerVariogram.setValue(VariogramFunctions.INVERSE_POWER);
     spinnerVariogram.addToComponent(timerFrame.jToolBar, "variograms");
-    spinnerVariogram.addSpinnerListener(v -> recompute());
+    spinnerVariogram.addSpinnerListener(_ -> recompute());
     {
       spinnerBeta = SpinnerLabel.of(BETAS.stream().map(Scalar.class::cast).toList());
       spinnerBeta.setValue(RealScalar.of(2));
       spinnerBeta.addToComponent(timerFrame.jToolBar, "beta");
-      spinnerBeta.addSpinnerListener(v -> recompute());
+      spinnerBeta.addSpinnerListener(_ -> recompute());
     }
     controlPointsRender.setMidpointIndicated(false);
-    spinnerLogWeighting.addSpinnerListener(v -> recompute());
+    spinnerLogWeighting.addSpinnerListener(_ -> recompute());
   }
 
   private static final Tensor BETAS = Tensors.fromString("{0, 1/2, 1, 3/2, 7/4, 2, 5/2, 3}");
